--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+language: R
+cache: packages
 
 addons:
     apt:
@@ -10,5 +11,8 @@ addons:
             - libmagick++-dev
             - libpoppler-cpp-dev
 
-language: R
-cache: packages
+r_packages:
+      - covr
+
+after_success: Rscript -e "covr::codecov()"
+
