add pkgdown travis deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,9 @@ r_packages:
 
 after_success: Rscript -e "covr::codecov(line_exclusions = list('R/generate-maps.R', 'src/edge_thin.h', 'src/edge_thin.cpp'))"
 
+before_deploy: Rscript -e 'remotes::install_cran("pkgdown")'
+deploy:
+    provider: script
+    script: Rscript -e 'pkgdown::deploy_site_github(verbose = TRUE)'
+    skip_cleanup: true
+
