:rocket:_pkgdown.yml

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -5,6 +5,9 @@ templates:
     bootswatch: cerulean
 
 reference:
+  - title: Package doc
+    contents:
+    - mapscanner-package
   - title: The Main Functions
     contents:
     - ms_generate_map
