--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,7 +12,7 @@ reference:
     contents:
     - ms_generate_map
     - ms_rectify_maps
-  - title: Extra Functions
+  - title: Bonus Features
     contents:
     - ms_aggregate_poly
 
