--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(ms_generate_map)
 export(ms_rectify_maps)
 importFrom(Rcpp,evalCpp)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
 useDynLib(mapscanner, .registration = TRUE)
