mv aggregate_poly -> aggregate_polys

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -14,7 +14,7 @@ reference:
     - ms_rectify_maps
   - title: Bonus Features
     contents:
-    - ms_aggregate_poly
+        - ms_aggregate_polys
 
 articles:
   - title: The mapscanner package
