--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: c(
     person("Michael D.", "Sumner", role = "aut", email = "mdsumner@gmail.com"))
 Description: Print maps, draw on them, scan them back in, and convert to spatial
     objects.
-License: GPL-3 | BSD_2_clause + file LICENSE
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 NeedsCompilation: yes
@@ -47,4 +47,4 @@ VignetteBuilder: knitr
 URL: https://github.com/mpadge/mapscanner
 BugReports: https://github.com/mpadge/mapscanner/issues
 RoxygenNote: 6.1.1
-Language: en-US
+Language: en-GB
