--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
 r_packages:
     - covr
 
-after_success: Rscript -e "covr::codecov(line_exclusions = list('R/generate-maps.R'))"
+after_success: Rscript -e "covr::codecov()"
 
 before_deploy: Rscript -e 'remotes::install_cran("pkgdown")'
 deploy:
