--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,12 @@ Title: Print Maps, Draw on Them, Scan Them Back In
 Version: 0.0.1
 Authors@R: c(
     person("Mark", "Padgham", email="mark.padgham@email.com", role=c("aut", "cre")),
-    person("Michael D.", "Sumner", role = "aut", email = "mdsumner@gmail.com"))
+    person("Michael D.", "Sumner", role = "aut", email = "mdsumner@gmail.com"),
+    person("Stanislaw", "Adaszewski", role = "cph",
+        comment = "author of include concaveman-cpp code"))
 Description: Print maps, draw on them, scan them back in, and convert to spatial
     objects.
-License: GPL-3
+License: GPL-3 | BSD_2_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
 NeedsCompilation: yes
