add missing vignette file for ropensci/software-review#330

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -11,7 +11,6 @@
 ^CODE_OF_CONDUCT\.md$
 ^CONTRIBUTING\.md$
 inst/WORDLIST$
-=======
+vignettes/mapstyles.Rmd
 ^.*\.Rproj$
 ^\.Rproj\.user$
->>>>>>> aggregate-poly-faster
