--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -9,12 +9,15 @@
 ^codemeta\.json$
 ^CODE_OF_CONDUCT\.md$
 ^CONTRIBUTING\.md$
-inst/WORDLIST$
+^WORDLIST$
 ^paper\.md$
-vignettes/mapstyles.Rmd
-vignettes/mapstyles.html
+^inst/WORDLIST$
+^inst/paper\.md$
+vignettes/mapstyles\.Rmd
+vignettes/mapstyles\.html
 vignettes/omaha-*.png$
+rev-testdata/*
 ^.*\.Rproj$
+^.*\.bash$
 ^\.Rproj\.user$
-rev-testdata
 ^\.github$
