--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: mapscanner
-Title: Print Maps, Draw on Them, Scan Them Back In
+Title: Print Maps, Draw on Them, Scan Them Back in
 Version: 0.0.3
 Authors@R: c(
     person("Mark", "Padgham", email="mark.padgham@email.com", role=c("aut", "cre")),
