--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,7 +11,7 @@ reference:
   - title: The Main Functions
     contents:
     - ms_generate_map
-    - ms_rectify_maps
+    - ms_rectify_map
   - title: Bonus Features
     contents:
         - ms_aggregate_polys
