--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mapscanner
 Title: Print Maps, Draw on Them, Scan Them Back in
-Version: 0.0.3.014
+Version: 0.0.3.015
 Authors@R: 
     c(person(given = "Mark",
              family = "Padgham",
@@ -22,8 +22,8 @@ Authors@R:
              family = "Adaszewski",
              role = "cph",
              comment = "author of include concaveman-cpp code"))
-Description: Print maps, draw on them, scan them back in, and
-    convert to spatial objects.
+Description: Print maps, draw on them, scan them back in, and convert to
+    spatial objects.
 License: GPL-3 | BSD_2_clause + file LICENSE
 URL: https://github.com/ropensci/mapscanner
 BugReports: https://github.com/ropensci/mapscanner/issues
