--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,27 +1,16 @@
 Package: mapscanner
 Title: Print Maps, Draw on Them, Scan Them Back in
-Version: 0.0.3.016
-Authors@R: 
-    c(person(given = "Mark",
-             family = "Padgham",
-             role = c("aut", "cre"),
-             email = "mark.padgham@email.com"),
-      person(given = "Michael D.",
-             family = "Sumner",
-             role = "aut",
-             email = "mdsumner@gmail.com"),
-      person(given = "Kelly",
-             family = "Hondula",
-             role = "rev",
-             comment = "Kelly reviewed the package for rOpenSci, see https://github.com/ropensci/software-review/issues/330"),
-      person(given = "Nicholas",
-             family = "Potter",
-             role = "rev",
-             comment = "Nichola reviewed the package for rOpenSci, see https://github.com/ropensci/software-review/issues/330"),
-      person(given = "Stanislaw",
-             family = "Adaszewski",
-             role = "cph",
-             comment = "author of include concaveman-cpp code"))
+Version: 0.0.3.017
+Authors@R: c(
+    person("Mark", "Padgham", , "mark.padgham@email.com", role = c("aut", "cre")),
+    person("Michael D.", "Sumner", , "mdsumner@gmail.com", role = "aut"),
+    person("Kelly", "Hondula", role = "rev",
+           comment = "Kelly reviewed the package for rOpenSci, see https://github.com/ropensci/software-review/issues/330"),
+    person("Nicholas", "Potter", role = "rev",
+           comment = "Nichola reviewed the package for rOpenSci, see https://github.com/ropensci/software-review/issues/330"),
+    person("Stanislaw", "Adaszewski", role = "cph",
+           comment = "author of include concaveman-cpp code")
+  )
 Description: Print maps, draw on them, scan them back in, and convert to
     spatial objects.
 License: GPL-3 | BSD_2_clause + file LICENSE
