--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mapscanner
 Title: Print Maps, Draw on Them, Scan Them Back in
-Version: 0.0.3.019
+Version: 0.0.3.020
 Authors@R: c(
     person("Mark", "Padgham", , "mark.padgham@email.com", role = c("aut", "cre")),
     person("Michael D.", "Sumner", , "mdsumner@gmail.com", role = "aut"),
@@ -32,13 +32,10 @@ Imports:
     raster,
     Rcpp,
     reproj,
-    rlang,
     RNiftyReg,
-    RTriangle,
     sf,
     slippymath,
-    tibble,
-    unjoin
+    tibble
 Suggests: 
     dplyr,
     ggplot2,
@@ -62,5 +59,5 @@ Language: en-GB
 LazyData: true
 NeedsCompilation: yes
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 SystemRequirements: C++11
