.Rbuildignore hex-logo

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -10,6 +10,7 @@
 ^CODE_OF_CONDUCT\.md$
 ^CONTRIBUTING\.md$
 ^cran-comments\.md$
+man/figures/mapscanner\.png$
 ^WORDLIST$
 ^paper\.md$
 ^review\.md$
