add macOS sys deps thanks to @steffilazerte

--- a/.github/workflows/extra-os-check.yaml
+++ b/.github/workflows/extra-os-check.yaml
@@ -43,13 +43,18 @@ jobs:
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
-      - name: system dependencies
+      - name: Linux dependencies
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
           sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev
           sudo apt-get install libudunits2-dev libgdal-dev
           sudo apt-get install libmagick++-dev libpoppler-cpp-dev
+
+     - name: MacOS dependencies
+       if: runner.os == 'macOS'
+       run: |
+         brew install pkg-config gdal proj
 
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
