update .Rbuildignore [ci skip]

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,27 +1,28 @@
-^_pkgdown\.yml$
-^README\.*
-^makefile$
-^appveyor\.yml$
-^aaa.Rmd$
-^vignettes/makefile$
-^codemeta\.json$
-^CODE_OF_CONDUCT\.md$
-^CONTRIBUTING\.md$
-^cran-comments\.md$
-man/figures/.*\.png$
-^WORDLIST$
-^paper\.md$
-^review\.md$
-^inst/WORDLIST$
-^inst/paper\.md$
-^tests/spelling\.R$
-script\.bash$
-rev-testdata/*
-data-raw/
+.ccls-cache/
 ^.*\.Rproj$
 ^.*\.bash$
+^CODE_OF_CONDUCT\.md$
+^CONTRIBUTING\.md$
+^NEWS\.md$
+^README\.*
+^WORDLIST$
 ^\.Rproj\.user$
 ^\.github$
-^\.pre-commit-config\.yaml$
 ^\.hooks$
-^NEWS\.md$
+^\.pre-commit-config\.yaml$
+^_pkgdown\.yml$
+^aaa.Rmd$
+^appveyor\.yml$
+^codemeta\.json$
+^cran-comments\.md$
+^inst/WORDLIST$
+^inst/paper\.md$
+^makefile$
+^paper\.md$
+^review\.md$
+^tests/spelling\.R$
+^vignettes/makefile$
+data-raw/
+man/figures/.*\.png$
+rev-testdata/*
+script\.bash$
