--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,7 +4,8 @@
 ^CODE_OF_CONDUCT\.md$
 ^CONTRIBUTING\.md$
 ^NEWS\.md$
-^README\.*
+^README\.Rmd$
+^README\.html$
 ^WORDLIST$
 ^\.Rproj\.user$
 ^\.github$
